logs/Slang/chapter-11/11.4.14.4--dynamic_array_stream.sv.log
name: dynamic_array_unpack_stream
description: stream unpack test with dynamic array
should_fail: 0
tags: 11.4.14.4
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-11/11.4.14.4--dynamic_array_stream.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-11/11.4.14.4--dynamic_array_stream.sv:11:12: error: dimension requires a constant range
byte i_data[];
           ^~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-11/11.4.14.4--dynamic_array_stream.sv:16:12: error: dimension requires a constant range
byte o_data[];
           ^~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-11/11.4.14.4--dynamic_array_stream.sv:20:10: error: dimension requires a constant range
	byte pkt[$];
	        ^~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-11/11.4.14.4--dynamic_array_stream.sv:24:11: error: language feature not yet supported
	i_data = new[5];
	         ^~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-11/11.4.14.4--dynamic_array_stream.sv:27:8: error: language feature not yet supported
	pkt = {<< byte{i_header, i_len, i_data, i_crc}};
	      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-11/11.4.14.4--dynamic_array_stream.sv:29:2: error: language feature not yet supported
	{<< byte{o_header, o_len, o_data with [0 +: o_len], o_crc}} = pkt;
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
